--- a/package.json
+++ b/package.json
@@ -16,13 +16,12 @@
     "clean": "rimraf dist",
     "build": "node build/build.js",
     "build:dll": "webpack --progress --config build/webpack.config.dll.js",
-    "lint": "yon run lint:js && yon run lint:css",
+    "lint": "yon run lint:js",
     "lint:js": "eslint --ext js --ext jsx --ext vue src test/**/*.spec.js test/*.js build",
     "lint:js:fix": "yon run lint:js -- --fix",
-    "lint:css": "stylelint src/**/*.{vue,css}",
     "lint:staged": "lint-staged",
     "pretest": "yon run lint",
-    "test": "cross-env BABEL_ENV=test karma start test/karma.conf.js --single-run",
+    "test": "jest",
     "dev": "webpack-dashboard -- webpack-dev-server --config build/webpack.config.dev.js --open",
     "dev:coverage": "cross-env BABEL_ENV=test karma start test/karma.conf.js",
     "prepublish": "yon run build"
@@ -36,24 +35,28 @@
       "stylelint"
     ]
   },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
+  },
   "pre-commit": "lint:staged",
   "devDependencies": {
-    "buble": "^0.15.2",
-    "clean-css": "^4.0.0",
-    "mkdirp": "^0.5.1",
-    "rollup": "^0.41.6",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-commonjs": "^8.0.0",
-    "rollup-plugin-jsx": "^1.0.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-postcss": "^0.4.1",
-    "rollup-plugin-replace": "^1.1.0",
-    "rollup-plugin-vue": "^2.3.0",
-    "uglify-js": "^3.0.0",
+    "@vue/test-utils": "^1.0.0-beta.12",
     "add-asset-html-webpack-plugin": "^2.0.0",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.0",
+    "babel-jest": "^22.4.0",
     "babel-loader": "^7.0.0",
     "babel-plugin-istanbul": "^4.1.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -61,8 +64,10 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.4.0",
     "babel-preset-env": "^1.4.0",
+    "buble": "^0.15.2",
     "chai": "^3.5.0",
     "chai-dom": "^1.4.0",
+    "clean-css": "^4.0.0",
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
@@ -70,6 +75,7 @@
     "eslint-plugin-vue": "^2.0.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "jest": "^22.4.0",
     "karma": "^1.7.0",
     "karma-chai-dom": "^1.1.0",
     "karma-chrome-launcher": "^2.1.0",
@@ -80,12 +86,22 @@
     "karma-spec-reporter": "^0.0.31",
     "karma-webpack": "^2.0.0",
     "lint-staged": "^3.4.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^3.3.0",
     "mocha-css": "^1.0.1",
+    "nock": "^9.1.9",
     "postcss": "^6.0.0",
     "postcss-cssnext": "^2.10.0",
     "pre-commit": "^1.2.0",
     "rimraf": "^2.6.0",
+    "rollup": "^0.41.6",
+    "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-commonjs": "^8.0.0",
+    "rollup-plugin-jsx": "^1.0.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-postcss": "^0.4.1",
+    "rollup-plugin-replace": "^1.1.0",
+    "rollup-plugin-vue": "^2.3.0",
     "sinon": "2.2.0",
     "sinon-chai": "^2.10.0",
     "style-loader": "^0.17.0",
@@ -93,8 +109,10 @@
     "stylelint": "^7.10.0",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-processor-html": "^1.0.0",
+    "uglify-js": "^3.0.0",
     "uppercamelcase": "^3.0.0",
     "vue": "^2.3.0",
+    "vue-jest": "^2.1.0",
     "vue-loader": "^12.0.0",
     "vue-template-compiler": "^2.3.0",
     "webpack": "^2.5.0",
