--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,9 +1,11 @@
 {
   "env": {
-    "mocha": true
+    "mocha": true,
+    "jest": true
   },
   "globals": {
     "expect": true,
-    "sinon": true
+    "sinon": true,
+    "it": true
   }
 }
