--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "vue": "^2.3.0",
     "vue-jest": "^2.1.0",
     "vue-loader": "^12.0.0",
+    "vue-resource": "^1.4.0",
     "vue-template-compiler": "^2.3.0",
     "webpack": "^2.5.0",
     "webpack-bundle-analyzer": "^2.4.0",
