--- a/package.json
+++ b/package.json
@@ -65,8 +65,6 @@
     "babel-plugin-transform-vue-jsx": "^3.4.0",
     "babel-preset-env": "^1.4.0",
     "buble": "^0.15.2",
-    "chai": "^3.5.0",
-    "chai-dom": "^1.4.0",
     "clean-css": "^4.0.0",
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.0",
@@ -76,19 +74,8 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^22.4.0",
-    "karma": "^1.7.0",
-    "karma-chai-dom": "^1.1.0",
-    "karma-chrome-launcher": "^2.1.0",
-    "karma-coverage": "^1.1.0",
-    "karma-mocha": "^1.3.0",
-    "karma-sinon-chai": "^1.3.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "^0.0.31",
-    "karma-webpack": "^2.0.0",
     "lint-staged": "^3.4.0",
     "mkdirp": "^0.5.1",
-    "mocha": "^3.3.0",
-    "mocha-css": "^1.0.1",
     "nock": "^9.1.9",
     "postcss": "^6.0.0",
     "postcss-cssnext": "^2.10.0",
@@ -102,8 +89,6 @@
     "rollup-plugin-postcss": "^0.4.1",
     "rollup-plugin-replace": "^1.1.0",
     "rollup-plugin-vue": "^2.3.0",
-    "sinon": "2.2.0",
-    "sinon-chai": "^2.10.0",
     "style-loader": "^0.17.0",
     "stylefmt": "^5.3.0",
     "stylelint": "^7.10.0",
@@ -114,7 +99,6 @@
     "vue": "^2.3.0",
     "vue-jest": "^2.1.0",
     "vue-loader": "^12.0.0",
-    "vue-resource": "^1.4.0",
     "vue-template-compiler": "^2.3.0",
     "webpack": "^2.5.0",
     "webpack-bundle-analyzer": "^2.4.0",
@@ -124,18 +108,16 @@
     "yarn-or-npm": "^2.0.0"
   },
   "peerDependencies": {
+    "lodash": "^4.17.4",
     "vue": "^2.5.13",
     "vuex": "^3.0.1",
-    "lodash": "^4.17.4"
+    "vue-resource": "^1.4.0"
   },
   "dllPlugin": {
     "name": "vuePluginTemplateDeps",
     "include": [
-      "mocha/mocha.js",
-      "style-loader!css-loader!mocha-css",
       "html-entities",
       "vue/dist/vue.js",
-      "chai",
       "core-js/library",
       "url",
       "sockjs-client",
