--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuex-arcsecond-module-generator",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "A Vuex Plugin",
   "author": "Cédric Foellmi <cedric@onekilopars.ec>",
   "main": "dist/vuex-arcsecond-module-generator.common.js",
@@ -113,8 +113,8 @@
   "peerDependencies": {
     "lodash": "^4.17.4",
     "vue": "^2.5.13",
-    "vuex": "^3.0.1",
-    "vue-resource": "^1.4.0"
+    "vue-resource": "^1.4.0",
+    "vuex": "^3.0.1"
   },
   "dllPlugin": {
     "name": "vuePluginTemplateDeps",
