--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
       "stylelint"
     ]
   },
+  "pre-commit": "lint:staged",
   "jest": {
     "moduleFileExtensions": [
       "js",
@@ -52,7 +53,6 @@
       "^@/(.*)$": "<rootDir>/src/$1"
     }
   },
-  "pre-commit": "lint:staged",
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.12",
     "add-asset-html-webpack-plugin": "^2.0.0",
@@ -141,5 +141,10 @@
   "license": {
     "type": "MIT",
     "url": "http://www.opensource.org/licenses/mit-license.php"
+  },
+  "dependencies": {
+    "user": "0.0.0",
+    "vue-resource": "^1.5.0",
+    "vuex": "^3.0.1"
   }
 }
