--- a/package.json
+++ b/package.json
@@ -102,6 +102,8 @@
     "vue": "^2.3.0",
     "vue-jest": "^2.1.0",
     "vue-loader": "^12.0.0",
+    "vue-resource": "^1.4.0",
+    "vuex": "^3.0.1",
     "vue-template-compiler": "^2.3.0",
     "webpack": "^2.5.0",
     "webpack-bundle-analyzer": "^2.4.0",
@@ -112,9 +114,7 @@
   },
   "peerDependencies": {
     "lodash": "^4.17.4",
-    "vue": "^2.5.13",
-    "vue-resource": "^1.4.0",
-    "vuex": "^3.0.1"
+    "vue": "^2.5.13"
   },
   "dllPlugin": {
     "name": "vuePluginTemplateDeps",
