--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "vuex-arcsecond-module-generator",
+  "name": "@onekiloparsec/vuex-module-generator",
   "version": "1.2.10",
   "description": "A Vuex Plugin",
-  "author": "Cédric Foellmi <cedric@onekilopars.ec>",
-  "main": "dist/vuex-arcsecond-module-generator.common.js",
-  "module": "dist/vuex-arcsecond-module-generator.esm.js",
-  "browser": "dist/vuex-arcsecond-module-generator.js",
-  "unpkg": "dist/vuex-arcsecond-module-generator.js",
-  "style": "dist/vuex-arcsecond-module-generator.css",
+  "author": "Cédric Foellmi <cedric@onekiloparsec.dev>",
+  "main": "dist/vuex-module-generator.common.js",
+  "module": "dist/vuex-module-generator.esm.js",
+  "browser": "dist/vuex-module-generator.js",
+  "unpkg": "dist/vuex-module-generator.js",
+  "style": "dist/vuex-module-generator.css",
   "files": [
     "dist",
     "src"
@@ -27,7 +27,7 @@
     "prepublish": "yon run build"
   },
   "publishConfig": {
-    "registry": "http://localhost:4873"
+    "registry": "https://npm.pkg.github.com/@onekiloparsec"
   },
   "lint-staged": {
     "*.{vue,jsx,js}": [
@@ -54,67 +54,67 @@
     }
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.12",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "add-asset-html-webpack-plugin": "^3.1.3",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^7.2.0",
-    "babel-helper-vue-jsx-merge-props": "^2.0.0",
-    "babel-jest": "^24.5.0",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-istanbul": "^5.1.1",
+    "@babel/core": "^7.6.0",
+    "babel-eslint": "^10.0.3",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-jest": "^25.0.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-istanbul": "^5.2.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.4.0",
     "babel-preset-env": "^1.7.0",
-    "buble": "^0.15.2",
-    "clean-css": "^4.0.0",
-    "cross-env": "^4.0.0",
-    "css-loader": "^2.1.1",
-    "eslint": "^3.19.0",
-    "eslint-config-vue": "^2.0.0",
-    "eslint-plugin-vue": "^2.0.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "jest": "^24.5.0",
+    "buble": "^0.19.8",
+    "clean-css": "^4.2.1",
+    "cross-env": "^5.2.1",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.4.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-vue": "^5.2.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "lint-staged": "^3.4.0",
     "mkdirp": "^0.5.1",
     "nock": "^9.1.9",
-    "postcss": "^6.0.0",
-    "postcss-cssnext": "^2.10.0",
+    "postcss": "^7.0.18",
+    "postcss-cssnext": "^2.11.0",
     "pre-commit": "^1.2.0",
     "rimraf": "^2.6.0",
-    "rollup": "^0.41.6",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-commonjs": "^8.0.0",
-    "rollup-plugin-jsx": "^1.0.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup": "^0.68.2",
+    "rollup-plugin-buble": "^0.19.8",
+    "rollup-plugin-commonjs": "^8.4.1",
+    "rollup-plugin-jsx": "^1.0.3",
+    "rollup-plugin-node-resolve": "^4.2.4",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-replace": "^1.1.0",
-    "rollup-plugin-vue": "^4.7.2",
-    "style-loader": "^0.17.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-vue": "^5.0.1",
+    "style-loader": "^1.0.0",
     "stylefmt": "^6.0.3",
-    "stylelint": "^9.10.1",
+    "stylelint": "^10.1.0",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-processor-html": "^1.0.0",
     "uglify-js": "^3.0.0",
     "uppercamelcase": "^3.0.0",
-    "vue": "^2.3.0",
-    "vue-jest": "^2.1.0",
-    "vue-loader": "^12.0.0",
-    "vue-resource": "^1.4.0",
-    "vue-template-compiler": "^2.3.0",
-    "vuex": "^3.0.1",
-    "webpack": "^2.5.0",
-    "webpack-bundle-analyzer": "^2.4.0",
-    "webpack-dashboard": "^3.0.1",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-merge": "^4.0.0",
-    "yarn-or-npm": "^2.0.0"
+    "vue": "^2.6.10",
+    "vue-jest": "^3.0.5",
+    "vue-loader": "^15.7.1",
+    "vue-resource": "^1.5.1",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1",
+    "webpack": "^4.40.2",
+    "webpack-bundle-analyzer": "^3.5.0",
+    "webpack-dashboard": "^3.2.0",
+    "webpack-dev-server": "^3.8.0",
+    "webpack-merge": "^4.2.2",
+    "yarn-or-npm": "^2.0.4"
   },
   "peerDependencies": {
-    "lodash": "^4.17.4",
-    "vue": "^2.5.13"
+    "lodash": "^4.17.15",
+    "vue": "^2.6.10"
   },
   "dllPlugin": {
     "name": "vuePluginTemplateDeps",
@@ -132,18 +132,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/onekiloparsec/vuex-arcsecond-module-generator.git"
+    "url": "git+https://github.com/onekiloparsec/vuex-module-generator.git"
   },
   "bugs": {
-    "url": "https://github.com/onekiloparsec/vuex-arcsecond-module-generator/issues"
+    "url": "https://github.com/onekiloparsec/vuex-module-generator/issues"
   },
-  "homepage": "https://github.com/onekiloparsec/vuex-arcsecond-module-generator#readme",
+  "homepage": "https://github.com/onekiloparsec/vuex-module-generator#readme",
   "license": {
     "type": "MIT",
     "url": "http://www.opensource.org/licenses/mit-license.php"
   },
   "dependencies": {
-    "vue-resource": "^1.5.0",
-    "vuex": "^3.0.1"
+    "vue-resource": "^1.5.1",
+    "vuex": "^3.1.1"
   }
 }
