--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.2.13",
   "description": "A Vuex Plugin",
   "author": "Cédric Foellmi <cedric@onekiloparsec.dev>",
-  "main": "dist/vuex-arcsecond-module-generator.common.js",
-  "module": "dist/vuex-arcsecond-module-generator.esm.js",
-  "browser": "dist/vuex-arcsecond-module-generator.js",
-  "unpkg": "dist/vuex-arcsecond-module-generator.js",
-  "style": "dist/vuex-arcsecond-module-generator.css",
+  "main": "dist/vuex-module-generator.common.js",
+  "module": "dist/vuex-module-generator.esm.js",
+  "browser": "dist/vuex-module-generator.js",
+  "unpkg": "dist/vuex-module-generator.js",
+  "style": "dist/vuex-module-generator.css",
   "files": [
     "dist",
     "src"
@@ -132,16 +132,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/onekiloparsec/vuex-arcsecond-module-generator.git"
+    "url": "git+https://github.com/onekiloparsec/vuex-module-generator.git"
   },
   "bugs": {
-    "url": "https://github.com/onekiloparsec/vuex-arcsecond-module-generator/issues"
+    "url": "https://github.com/onekiloparsec/vuex-module-generator/issues"
   },
-  "homepage": "https://github.com/onekiloparsec/vuex-arcsecond-module-generator#readme",
-  "license": {
-    "type": "MIT",
-    "url": "http://www.opensource.org/licenses/mit-license.php"
-  },
+  "homepage": "https://github.com/onekiloparsec/vuex-module-generator#readme",
+  "license": "MIT",
   "dependencies": {
     "vue-resource": "^1.5.1",
     "vuex": "^3.1.1"
