--- a/package.json
+++ b/package.json
@@ -1,145 +1,29 @@
 {
-  "name": "@onekiloparsec/vuex-module-generator",
-  "version": "1.2.14",
-  "description": "A Vuex Plugin",
-  "author": "Cédric Foellmi <cedric@onekiloparsec.dev>",
-  "main": "dist/vuex-module-generator.common.js",
-  "module": "dist/vuex-module-generator.esm.js",
-  "browser": "dist/vuex-module-generator.js",
-  "unpkg": "dist/vuex-module-generator.js",
-  "style": "dist/vuex-module-generator.css",
-  "files": [
-    "dist",
-    "src"
-  ],
+  "name": "vuex-module-generator",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "clean": "rimraf dist",
-    "build": "node build/build.js",
-    "build:dll": "webpack --progress --config build/webpack.config.dll.js",
-    "lint": "yon run lint:js",
-    "lint:js": "eslint --ext js --ext jsx --ext vue src test/**/*.spec.js test/*.js build",
-    "lint:js:fix": "yon run lint:js -- --fix",
-    "lint:staged": "lint-staged",
-    "pretest": "yon run lint",
-    "test": "jest",
-    "dev": "webpack-dashboard -- webpack-dev-server --config build/webpack.config.dev.js --open",
-    "dev:coverage": "cross-env BABEL_ENV=test karma start test/karma.conf.js",
-    "prepublish": "yon run build"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint"
   },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
-  },
-  "lint-staged": {
-    "*.{vue,jsx,js}": [
-      "eslint --fix"
-    ],
-    "*.{vue,css}": [
-      "stylefmt",
-      "stylelint"
-    ]
-  },
-  "pre-commit": "lint:staged",
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "vue"
-    ],
-    "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
-      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
-    },
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/$1"
-    }
+  "dependencies": {
+    "core-js": "^3.3.2",
+    "vue": "^2.6.10",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "add-asset-html-webpack-plugin": "^3.1.3",
-    "@babel/core": "^7.6.0",
+    "@vue/cli-plugin-babel": "^4.0.0",
+    "@vue/cli-plugin-eslint": "^4.0.0",
+    "@vue/cli-plugin-unit-jest": "^4.0.0",
+    "@vue/cli-plugin-vuex": "^4.0.0",
+    "@vue/cli-service": "^4.0.0",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.3",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-jest": "^25.0.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-istanbul": "^5.2.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-vue-jsx": "^3.4.0",
-    "babel-preset-env": "^1.7.0",
-    "buble": "^0.19.8",
-    "clean-css": "^4.2.1",
-    "cross-env": "^5.2.1",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.4.0",
-    "eslint-config-vue": "^2.0.2",
-    "eslint-plugin-vue": "^5.2.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.9.0",
-    "lint-staged": "^3.4.0",
-    "mkdirp": "^0.5.1",
-    "nock": "^9.1.9",
-    "postcss": "^7.0.18",
-    "postcss-cssnext": "^2.11.0",
-    "pre-commit": "^1.2.0",
-    "rimraf": "^2.6.0",
-    "rollup": "^0.68.2",
-    "rollup-plugin-buble": "^0.19.8",
-    "rollup-plugin-commonjs": "^8.4.1",
-    "rollup-plugin-jsx": "^1.0.3",
-    "rollup-plugin-node-resolve": "^4.2.4",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-vue": "^5.0.1",
-    "style-loader": "^1.0.0",
-    "stylefmt": "^6.0.3",
-    "stylelint": "^10.1.0",
-    "stylelint-config-standard": "^16.0.0",
-    "stylelint-processor-html": "^1.0.0",
-    "uglify-js": "^3.0.0",
-    "uppercamelcase": "^3.0.0",
-    "vue": "^2.6.10",
-    "vue-jest": "^3.0.5",
-    "vue-loader": "^15.7.1",
-    "vue-resource": "^1.5.1",
-    "vue-template-compiler": "^2.6.10",
-    "vuex": "^3.1.1",
-    "webpack": "^4.40.2",
-    "webpack-bundle-analyzer": "^3.5.0",
-    "webpack-dashboard": "^3.2.0",
-    "webpack-dev-server": "^3.8.0",
-    "webpack-merge": "^4.2.2",
-    "yarn-or-npm": "^2.0.4"
-  },
-  "peerDependencies": {
-    "lodash": "^4.17.15",
-    "vue": "^2.6.10"
-  },
-  "dllPlugin": {
-    "name": "vuePluginTemplateDeps",
-    "include": [
-      "html-entities",
-      "vue/dist/vue.js",
-      "core-js/library",
-      "url",
-      "sockjs-client",
-      "vue-style-loader/lib/addStylesClient.js",
-      "events",
-      "ansi-html",
-      "style-loader/addStyles.js"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/onekiloparsec/vuex-module-generator.git"
-  },
-  "bugs": {
-    "url": "https://github.com/onekiloparsec/vuex-module-generator/issues"
-  },
-  "homepage": "https://github.com/onekiloparsec/vuex-module-generator#readme",
-  "license": "MIT",
-  "dependencies": {
-    "vuex": "^3.1.1"
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.6.10"
   }
 }
