--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --target lib ./src/index.js --name vuex-module-generator",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "prepublish": "npm run build"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
+    "vuex": "^3.1.1"
+  },
+  "peerDependencies": {
+    "lodash": "^4.17.15",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
