--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-resource": "^1.5.1",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1"
   }
 }
