--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "lint": "vue-cli-service lint",
     "prepublish": "npm run build"
   },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  },
   "peerDependencies": {
     "core-js": "^3.3.2",
     "lodash": "^4.17.15",
@@ -32,5 +29,17 @@
     "vue-resource": "^1.5.1",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1"
-  }
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/onekiloparsec/vuex-module-generator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/onekiloparsec/vuex-module-generator/issues"
+  },
+  "homepage": "https://github.com/onekiloparsec/vuex-module-generator#readme",
+  "license": "MIT"
 }
