--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "@onekiloparsec/vuex-module-generator",
   "version": "1.3.0",
-  "main": "dist/vuex-module-generator.common.js",
   "private": true,
+  "main": "dist/vuex-module-generator.common.js",
+  "module": "dist/vuex-module-generator.esm.js",
+  "browser": "dist/vuex-module-generator.js",
+  "unpkg": "dist/vuex-module-generator.js",
+  "style": "dist/vuex-module-generator.css",
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "build": "vue-cli-service build --target lib ./src/index.js --name vuex-module-generator",
     "test:unit": "vue-cli-service test:unit",
