--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.7.4",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-unit-jest": "^4.0.0",
@@ -34,7 +35,8 @@
     "vue": "^2.6.10",
     "vue-resource": "^1.5.1",
     "vue-template-compiler": "^2.6.10",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "webpack-bundle-analyzer": "^3.6.0"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
