--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
     "prepare": "npm run build"
   },
   "peerDependencies": {
-    "lodash": "^4.17.15",
-    "vuex": "^3.0.1"
+    "lodash": "^4.17.21",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.7.4",
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-plugin-unit-jest": "^4.0.0",
-    "@vue/cli-plugin-vuex": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-plugin-unit-jest": "^4.5.13",
+    "@vue/cli-plugin-vuex": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "@vue/test-utils": "1.2.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.26.0",
+    "eslint-plugin-vue": "^7.9.0",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.2",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "webpack-bundle-analyzer": "^4.4.1"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
