--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.26.0",
     "eslint-plugin-vue": "^7.9.0",
+    "flush-promises": "^1.0.2",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.2",
