--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint": "^7.26.0",
     "eslint-plugin-vue": "^7.9.0",
     "flush-promises": "^1.0.2",
+    "source-map-loader": "^3.0.0",
+    "ts-loader": "^9.2.3",
     "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.6.2",
