--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
   "name": "@onekiloparsec/vuex-module-generator",
   "version": "2.2.2",
+  "scripts": {
+    "build": "vue-cli-service build --target lib ./src/index.js --name vuex-module-generator",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint",
+    "build-ts": "tsc",
+    "prepare": "npm run build",
+    "watch-ts": "tsc -w"
+  },
   "main": "dist/vuex-module-generator.common.js",
   "module": "dist/vuex-module-generator.esm.js",
   "browser": "dist/vuex-module-generator.js",
   "unpkg": "dist/vuex-module-generator.js",
-  "style": "dist/vuex-module-generator.css",
   "files": [
     "dist",
     "src"
   ],
-  "scripts": {
-    "build": "vue-cli-service build --target lib ./src/index.js --name vuex-module-generator",
-    "build-ts": "tsc",
-    "watch-ts": "tsc -w",
-    "test:unit": "jest tests",
-    "lint": "vue-cli-service lint",
-    "prepare": "npm run build"
-  },
-  "peerDependencies": {
-    "vuex": "^3.6.2"
-  },
   "devDependencies": {
     "@babel/preset-env": "^7.7.4",
     "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-plugin-unit-jest": "^4.5.13",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-plugin-vuex": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
     "@vue/eslint-config-standard": "^4.0.0",
@@ -43,6 +39,14 @@
     "vuex": "^3.6.2",
     "webpack-bundle-analyzer": "^4.4.1"
   },
+  "peerDependencies": {
+    "vuex": "^3.6.2"
+  },
+  "bugs": {
+    "url": "https://github.com/onekiloparsec/vuex-module-generator/issues"
+  },
+  "homepage": "https://github.com/onekiloparsec/vuex-module-generator#readme",
+  "license": "MIT",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
@@ -50,9 +54,5 @@
     "type": "git",
     "url": "git+https://github.com/onekiloparsec/vuex-module-generator.git"
   },
-  "bugs": {
-    "url": "https://github.com/onekiloparsec/vuex-module-generator/issues"
-  },
-  "homepage": "https://github.com/onekiloparsec/vuex-module-generator#readme",
-  "license": "MIT"
+  "style": "dist/vuex-module-generator.css"
 }
