--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.6.2",
+    "webpack": "^5.46.0",
     "webpack-bundle-analyzer": "^4.4.1"
   },
   "peerDependencies": {
