--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,6 @@ jobs:
       run: |
         npm install
         npm run build --if-present
-        npm test
+        npm run test:unit
       env:
         CI: true
