--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "lint": "vue-cli-service lint",
     "prepare": "npm run build"
   },
-  "main": "dist/vuex-module-generator.common.js",
-  "module": "dist/vuex-module-generator.esm.js",
-  "browser": "dist/vuex-module-generator.js",
-  "unpkg": "dist/vuex-module-generator.js",
+  "main": "dist/vuex-module-generator.umd.min.js",
+  "module": "dist/vuex-module-generator.es.js",
   "files": [
     "dist",
     "src"
@@ -28,7 +26,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.6",
     "babel-types": "^6.26.0",
-    "eslint": "^7.26.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-vue": "^7.9.0",
     "flush-promises": "^1.0.2",
     "vue": "^2.6.14",
