--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "lint": "vue-cli-service lint",
     "prepare": "npm run build"
   },
-  "main": "dist/vuex-module-generator.umd.min.js",
-  "module": "dist/vuex-module-generator.es.js",
+  "main": "dist/vuex-module-generator.umd.js",
   "files": [
     "dist",
     "src"
