--- a/package.json
+++ b/package.json
@@ -2,40 +2,19 @@
   "name": "@onekiloparsec/vuex-module-generator",
   "version": "3.0.4",
   "scripts": {
-    "build": "vue-cli-service build --target lib ./src/index.js --name vuex-module-generator",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint",
-    "prepare": "npm run build"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "test": "jest"
   },
-  "main": "dist/vuex-module-generator.umd.js",
-  "files": [
-    "dist",
-    "src"
-  ],
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.7.4",
-    "@vue/cli-plugin-babel": "^4.5.13",
-    "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-plugin-vuex": "^4.5.13",
-    "@vue/cli-service": "^4.5.13",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "1.2.0",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.6",
-    "babel-types": "^6.26.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^7.9.0",
-    "flush-promises": "^1.0.2",
-    "vue": "^2.6.14",
-    "vue-template-compiler": "^2.6.10",
-    "vuex": "^3.6.2",
-    "webpack": "^4.46.0",
-    "webpack-bundle-analyzer": "^4.4.1"
+    "babel-preset-vite": "^1.0.4",
+    "ts-jest": "^27.0.5",
+    "vite": "^2.6.4"
   },
   "peerDependencies": {
-    "vuex": "^3.6.2"
+    "vuex": "^4.0.2"
   },
   "bugs": {
     "url": "https://github.com/onekiloparsec/vuex-module-generator/issues"
